--- a/css/style.css
+++ b/css/style.css
@@ -45,16 +45,19 @@ h4 {
 }
 
 .title {
-    font-size: 35px;
+    font-size: 30px;
     font-style: initial;
     font-family: 'Open Sans', sans-serif;
     padding: auto;
     margin: auto;
 }
 
+/* Textos da página */
+
 .texts{
     padding: 30px 10px;
     margin: 5px 10px;
+    
 }
 
 .texts p{
@@ -66,9 +69,71 @@ h4 {
     justify-items: center;
     text-align: center;
     display: flex;
+    align-items: center;
     width: 140px;
     height: 50px;
-    border: 1px black solid;
+}
+
+.boder .front{
+    margin: 0 auto;
+    padding: 15px 25px;
+    border-radius: 20px;
+    background-color: aqua;
+    box-shadow: 1px 1px 5px black;
+    transition: 0.5s;
+}
+
+h3 .front{
+    text-decoration: none;
+}
+
+.boder .front:hover{
+    font-size: 17px;
+}
+
+.boder .back{
+    padding: 14px 25px;
+}
+
+.boder .full{
+    padding: 14px 25px;
 }
 
 /* Utilizar o padding nos h3 para centralizar textos nas divs*/
+
+
+
+
+
+
+
+
+
+/*Algoritmoda animação */
+.container {
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .container p {
+    font-size: 3rem;
+    padding: 0.5rem;
+    
+    text-align: center;
+    overflow: hidden;
+  }
+  .container p span.typed-text {
+    font-weight: normal;
+    color: #dd7732;
+  }
+  .container p span.cursor {
+    display: inline-block;
+    background-color: #ccc;
+    margin-left: 0.1rem;
+    width: 3px;
+    animation: blink 1s infinite;
+  }
+  .container p span.cursor.typing {
+    animation: none;
+  }
