--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
+    text-decoration: none;
 }
 
 html {
@@ -25,7 +25,7 @@ html {
 }
 
 img#principal {
-    width: 40px;
+    width: 43px;
     background: black;
 }
 
@@ -37,11 +37,14 @@ h4 {
 
 .body {
     text-align: center;
-    margin-top: -250px; /* Aproxima a div body em relação à div header */
+    margin-top: -250px;
+    /* Aproxima a div body em relação à div header */
 }
 
 .body img {
     width: 100%;
+    border: none;
+    margin-bottom: none;
 }
 
 .title {
@@ -54,18 +57,8 @@ h4 {
 
 /* Textos da página */
 
-.texts{
-    padding: 30px 10px;
-    margin: 5px 10px;
-    
-}
 
-.texts p{
-    padding: 15px 5px;
-}
-
-
-.boder{
+.boder {
     justify-items: center;
     text-align: center;
     display: flex;
@@ -74,34 +67,76 @@ h4 {
     height: 50px;
 }
 
-.boder .front{
+.boder .front {
     margin: 0 auto;
     padding: 15px 25px;
     border-radius: 20px;
     background-color: aqua;
     box-shadow: 1px 1px 5px black;
     transition: 0.5s;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    position: absolute;
 }
 
-h3 .front{
-    text-decoration: none;
+
+
+.boder .front:hover {
+    font-size: 20px;
 }
 
-.boder .front:hover{
-    font-size: 17px;
+.boder .back {
+    margin: 0 auto;
+    padding: 15px 25px;
+    border-radius: 20px;
+    background-color: black;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: gray;
+    box-shadow: 1px 1px 5px black;
+    transition: 0.5s;
+    position: absolute;
 }
 
-.boder .back{
-    padding: 14px 25px;
+
+.boder .back:hover {
+    font-size: 20px;
 }
 
-.boder .full{
-    padding: 14px 25px;
+.boder .full {
+    margin: 0 auto;
+    padding: 15px 25px;
+    border-radius: 20px;
+    background-color: black;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: rgb(220, 83, 233);
+    box-shadow: 1px 1px 5px black;
+    transition: 0.5s;
+    position: absolute;
 }
 
-/* Utilizar o padding nos h3 para centralizar textos nas divs*/
 
+.boder .full:hover {
+    font-size: 20px;
+}
 
+/* Utilização centralizar textos nas divs*/
+
+.texts {
+    padding: 20px 10px;
+    margin: 5px 10px;
+    display: flex;
+}
+
+.texts p {
+    margin: 20px;
+    padding: 40px 30px;
+    width: auto;
+    height: auto;
+    border: 1px solid black;
+    background-color: #ccc;
+    border-radius: 10px;
+    border: none;
+    line-height: 24px;
+}
 
 
 
@@ -111,29 +146,44 @@ h3 .front{
 
 /*Algoritmoda animação */
 .container {
-    
+
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  .container p {
+}
+
+.container p {
     font-size: 3rem;
     padding: 0.5rem;
-    
+
     text-align: center;
     overflow: hidden;
-  }
-  .container p span.typed-text {
+}
+
+.container p span.typed-text {
     font-weight: normal;
     color: #dd7732;
-  }
-  .container p span.cursor {
+}
+
+.container p span.cursor {
     display: inline-block;
     background-color: #ccc;
     margin-left: 0.1rem;
     width: 3px;
     animation: blink 1s infinite;
-  }
-  .container p span.cursor.typing {
+}
+
+.container p span.cursor.typing {
     animation: none;
+}
+
+
+
+/* Imagem de fundo */
+
+div.fundir#principal {
+    
+        background-image: url(/img/business-team-meeting-boardroom.jpg);
+    
   }
+  
