--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ h4 {
     width: 100%;
     border: none;
     margin-bottom: none;
+    
 }
 
 .title {
@@ -138,7 +139,11 @@ h4 {
     line-height: 24px;
 }
 
-
+p{
+    text-align: justify;
+    word-spacing: 1px;
+    letter-spacing: 0px;
+}
 
 
 
@@ -177,13 +182,12 @@ h4 {
     animation: none;
 }
 
+main{
+    background-color: rgba(213, 219, 26, 0.449);
+}
 
 
 /* Imagem de fundo */
 
-div.fundir#principal {
-    
-        background-image: url(/img/business-team-meeting-boardroom.jpg);
-    
-  }
+
   
